--- a/recipes/0.html
+++ b/recipes/0.html
@@ -56,7 +56,8 @@
           <div class="list-group list-group-flush">
             <li class="list-group-item"><h5>Essentials</h5></li>
             <li class="list-group-item">Overnight Rice <em>(see notes below)</em></li>
-            <li class="list-group-item">Shallots/onions <em>(diced, see notes below)</em></li>
+            <li class="list-group-item">Shallots/Onions <em>(diced, see notes below)</em></li>
+            <li class="list-group-item">Garlic <em>(2-3, minced)</em></li>
             <li class="list-group-item">Green Onion <em>(sliced)</em></li>
             <li class="list-group-item">Frozen Vegetables <em>(diced, see notes below)</em></li>
             <li class="list-group-item">Eggs</li>
